<resources>
    <string name="app_name">Airplane Android</string>
    <string name="airplane">AIRPLANE</string>
    <string name="get_started">Get Started</string>
    <string name="explore_new_world_with_us_and_let_yourself_get_an_amazing_experiences">Explore new world with us and let yourself get an amazing experiences</string>
    <string name="fly_like_a_bird">Fly Like a Bird</string>
    <string name="join_us_and_get_n_your_next_journey">Join us and get\nyour next journey</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="hobby">Hobby</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="do_you_have_an_account">Do You Have An Account?</string>
    <string name="you_not_have_an_account">You Not Have An Account?</string>
    <string name="name">Name</string>
    <string name="balance">Balance</string>
    <string name="pay">Pay</string>
    <string name="big_bonus">Big Bonus 🎉</string>
    <string name="we_give_you_early_credit_so_that_nyou_can_buy_a_flight_ticket">We give you early credit so that\nyou can buy a flight ticket</string>
    <string name="start_fly_now">Start Fly Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_to_fly_today">Where to fly today?</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="saldo">Saldo</string>
    <string name="settings">Settings</string>
    <string name="howdy_name">Howdy,\n%1$s</string>
    <string name="new_this_year">New This Year</string>
    <string name="about">About</string>
    <string name="photos">Photos</string>
    <string name="interests">Interests</string>
    <string name="kids_park">Kids Park</string>
    <string name="honor_bridge">Honor Bridge</string>
    <string name="city_museum">City Museum</string>
    <string name="central_mall">Central Mall</string>
    <string name="per_orang">per orang</string>
    <string name="book_now">Book Now</string>
    <string name="select_your_nfavorite_seat">Select Your\nFavorite Seat</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="unavailable">Unavailable</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="your_seat">Your seat</string>
    <string name="total">Total</string>
    <string name="continue_to_checkout">Continue to Checkout</string>
    <string name="cgk">CGK</string>
    <string name="tlc">TLC</string>
    <string name="tangerang">Tangerang</string>
    <string name="ciliwung">Ciliwung</string>
    <string name="booking_details">Booking Details</string>
    <string name="traveler">Traveler</string>
    <string name="seat">Seat</string>
    <string name="insurance">Insurance</string>
    <string name="_2_person">2 person</string>
    <string name="yes">YES</string>
    <string name="refundable">Refundable</string>
    <string name="no">NO</string>
    <string name="vat">VAT</string>
    <string name="_45">45%</string>
    <string name="price">Price</string>
    <string name="grand_total">Grand Total</string>
    <string name="payment_details">Payment Details</string>
    <string name="current_balance">Current Balance</string>
    <string name="pay_now">Pay Now</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="email">Email</string>
</resources>