<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kBackgroundColor"
    tools:context=".view.chooseseat.ChooseSeatActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_select_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/select_your_nfavorite_seat"
        android:textColor="@color/kBlackColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_available"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_your" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/poppins"
        android:text="@string/available"
        android:textColor="@color/kBlackColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_available"
        app:layout_constraintStart_toEndOf="@id/iv_available"
        app:layout_constraintTop_toTopOf="@id/iv_available" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_selected"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_selected"
        app:layout_constraintBottom_toBottomOf="@id/tv_available"
        app:layout_constraintStart_toEndOf="@id/tv_available"
        app:layout_constraintTop_toTopOf="@id/tv_available" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/poppins"
        android:text="@string/selected"
        android:textColor="@color/kBlackColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_selected"
        app:layout_constraintStart_toEndOf="@id/iv_selected"
        app:layout_constraintTop_toTopOf="@id/iv_selected" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_unavailable"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_unavailable"
        app:layout_constraintBottom_toBottomOf="@id/tv_selected"
        app:layout_constraintStart_toEndOf="@id/tv_selected"
        app:layout_constraintTop_toTopOf="@id/tv_selected" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_unavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/poppins"
        android:text="@string/unavailable"
        android:textColor="@color/kBlackColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_unavailable"
        app:layout_constraintStart_toEndOf="@id/iv_unavailable"
        app:layout_constraintTop_toTopOf="@id/iv_unavailable" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bg_seat"
        android:layout_width="match_parent"
        android:layout_height="498dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/custom_background_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_selected" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="@id/iv_bg_seat"
        app:layout_constraintStart_toStartOf="@id/iv_bg_seat"
        app:layout_constraintTop_toTopOf="@id/iv_bg_seat">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/a"
            android:textColor="@color/kGreyColor"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/b"
            android:textColor="@color/kGreyColor"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="@color/kGreyColor"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/d"
            android:textColor="@color/kGreyColor"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>